@@ -406,6 +406,9 @@ Trunk (unreleased changes)
     HDFS-1912. Update tests for FsShell standardized error messages.
     (Daryn Sharp via szetszwo)
 
+    HDFS-1903. Fix path display for rm/rmr in TestHDFSCLI and TestDFSShell.
+    (Daryn Sharp via szetszwo)
+
 Release 0.22.0 - Unreleased
 
   NEW FEATURES
